Tidy up education section

--- a/cv-us.tex
+++ b/cv-us.tex
@@ -100,17 +100,16 @@
 \section*{Education}
 
 \begin{itemize}
-    \item \textbf{University of Cambridge} \\
+  \item \textbf{University of Cambridge}, Computer Science (2013--2017)
         \begin{tabular}{c}
-            \emph{2013--2017}
         \end{tabular}
         \begin{itemize}
-            \item \textbf{MEng} Computer Science \\
-              \emph{In Progress}
-            \item \textbf{BA Hons.} Computer Science \\
-                \emph{Final Grade}: Class I
+            \item \textbf{MEng} (\emph{In Progress})
+            \item \textbf{BA Hons.} (\emph{First Class})
         \end{itemize}
 \end{itemize}
+
+\section*{Research}
 
 \section*{Employment}
 
@@ -268,41 +267,6 @@
         \end{itemize}
 
 \end{itemize}
-
-\clearpage
-
-\section*{Skills and Technologies}
-
-    I am familiar with a wide range of programming languages and frameworks. My
-    primary areas of expertise are: \\
-
-	\begin{center}
-		\renewcommand{\arraystretch}{2}
-		\begin{tabular}{cp{10cm}}
-            C & I have a good deal of experience writing code in C, including
-            the implementation of kernel drivers and modifications to the Linux
-            kernel. My skills surrounding systems programming are strong as a
-            result of my time spent developing C. \\
-
-            Scala & My final year project was implemented in Scala, and in doing
-            so I have gained useful experience with strongly typed and
-            functional languages, as well as elements of type theory. \\
-
-            Python & I have experience with Python in a wide variety of
-            contexts. My uses for it include analysis of experimental data,
-            scripting / automation and development of web APIs using flask. \\
-
-            iOS & I have been developing iOS applications both personally and
-            professionally for over 3 years. My experience includes using both
-            Objective-C and Swift. \\
-
-            Java & I have used Java in a variety of contexts throughout my
-            development career. These include writing significant programs for
-            editing graphics, multithreaded and network programming.
-        \end{tabular}
-\end{center}
-
-\bigskip
 
 % Footer
 \begin{center}
