Move pcl up to the top.

--- a/cv-us.tex
+++ b/cv-us.tex
@@ -109,8 +109,40 @@
         \end{itemize}
 \end{itemize}
 
-\section*{Research}
+\section*{Research and Academic Projects}
+  \begin{itemize}
+    \item \textbf{Static Analysis with TESLA} Masters Thesis \\
+      \begin{tabular}{c|c}
+        \emph{November 2016--June 2017} & \emph{University of Cambridge}
+      \end{tabular}
+      \begin{itemize}
+        \item Matsers
+      \end{itemize}
 
+    \item \textbf{An Implementation of the $\pi$-Calculus} Bachelors Thesis \\
+        \begin{tabular}{c|c}
+            \emph{October 2015--May 2016} & \emph{University of Cambridge}
+        \end{tabular}
+        \begin{itemize}
+            \item In my final undergraduate year, my Bachelors project and
+              dissertation involved the development of a programming language
+              and runtime environment based on the $\pi$-Calculus process
+              algebra.
+
+            \item The project included a bytecode compiler for a language of my
+              own design, as well as a full scheduling virtual machine to
+              execute the bytecode. Both the compiler and virtual machine were
+              written in Scala.
+
+            \item In undertaking this project I gained strong experience in the
+              theory and practice of compiler implementation, as well as an
+              understanding of the problems faced when building concurrent
+              systems.
+
+            \item The final project implementation and associated dissertation
+              received a first-class grade.
+        \end{itemize}
+  \end{itemize}
 \section*{Employment}
 
 \begin{itemize}
@@ -217,56 +249,34 @@
 %		\end{itemize}
 \end{itemize}
 
-\section*{Other Projects}
+%\section*{Other Projects}
 
-\begin{itemize}
-
-    \item \textbf{An Implementation of the $\pi$-Calculus} Part II Project \\
-        \begin{tabular}{c|c}
-            \emph{October 2015--May 2016} & \emph{Cambridge, UK}
-        \end{tabular}
-        \begin{itemize}
-            \item In my final undergraduate year, my Part II project and
-                dissertation involved the development of a programming language
-                and runtime environment for the process algebra known as the
-                $\pi$-Calculus.
-
-            \item The project included a bytecode compiler for a language of my
-                own design, as well as a full scheduling virtual machine to
-                execute the bytecode.
-
-            \item In undertaking this project, I gained strong experience in
-                both the theory and practice of compiler implementation. Equally
-                important was an understanding of the problems faced when
-                building concurrent systems.
-
-            \item The final project implementation and associated dissertation
-                received a first-class mark.
-        \end{itemize}
-
-    \item \textbf{Webmaster} Trinity Hall June Event \\
-        \begin{tabular}{c|c}
-            \emph{October 2014--June 2015} & \emph{Cambridge, UK}
-        \end{tabular}
-        \begin{itemize}
-            \item In my second year of university I took on the role of
-                Webmaster for the Trinity Hall June Event 2015, the largest
-                capacity event in Cambridge University's famous May Week (with
-                2000 people attending the event).
-            \item My responsibilities included designing a bespoke, responsive
-                website design in conjunction with the event's graphic
-                designers. The site is no longer online as it has been
-                superseded by the site for 2016.
-            \item I was also responsible for managing the use of the event's
-                ticketing software. This involved both practical and technical
-                skills---I ran a team of 6 people on the night of the event to
-                control admission, as well as writing custom ticket generation
-                and distribution software.
-            \item The role required me to work effectively on a large team with
-                a wide range of interests and responsibilities.
-        \end{itemize}
-
-\end{itemize}
+%\begin{itemize}
+%
+%
+%    \item \textbf{Webmaster} Trinity Hall June Event \\
+%        \begin{tabular}{c|c}
+%            \emph{October 2014--June 2015} & \emph{Cambridge, UK}
+%        \end{tabular}
+%        \begin{itemize}
+%            \item In my second year of university I took on the role of
+%                Webmaster for the Trinity Hall June Event 2015, the largest
+%                capacity event in Cambridge University's famous May Week (with
+%                2000 people attending the event).
+%            \item My responsibilities included designing a bespoke, responsive
+%                website design in conjunction with the event's graphic
+%                designers. The site is no longer online as it has been
+%                superseded by the site for 2016.
+%            \item I was also responsible for managing the use of the event's
+%                ticketing software. This involved both practical and technical
+%                skills---I ran a team of 6 people on the night of the event to
+%                control admission, as well as writing custom ticket generation
+%                and distribution software.
+%            \item The role required me to work effectively on a large team with
+%                a wide range of interests and responsibilities.
+%        \end{itemize}
+%
+%\end{itemize}
 
 % Footer
 \begin{center}
