Squeeze JE onto second page

--- a/cv-us.tex
+++ b/cv-us.tex
@@ -116,7 +116,14 @@
         \emph{November 2016--June 2017} & \emph{University of Cambridge}
       \end{tabular}
       \begin{itemize}
-        \item Matsers
+        \item TESLA is a framework for dynamic instrumentation of C programs
+          using temporal logic assertions. As part of my Masters degree, I am
+          conducting research into how static analysis can be used to extend the
+          capabilities of this system.
+
+        \item The primary research goal is to identify a useful subset of
+          temporal logic assertions that can be proved at compile time, and to
+          use this analysis to optimise instrumentation using TESLA.
       \end{itemize}
 
     \item \textbf{An Implementation of the $\pi$-Calculus} Bachelors Thesis \\
@@ -170,13 +177,16 @@
         \end{tabular}
         \begin{itemize}
             \item At RealVNC I was primarily responsible for prototyping an
-                implementation of Apple's CarPlay in-car entertainment software.
+              implementation of Apple's CarPlay in-car entertainment software.
+
             \item My role involved developing kernel drivers to support USB
-                communication with the iPhone, as well as building the
-                user-level CarPlay software itself.
-            \item As well as CarPlay, I worked on several smaller projects
-                related to the company's demonstration software that were of
-                immediate value to my team.
+              communication with the iPhone, as well as building the user-level
+              CarPlay software itself.
+
+            \item I was responsible for undertaking preliminary research into
+              how CarPlay could be integrated into the company's existing in-car
+              systems, as well as the development work involved in building a
+              prototype.
         \end{itemize}
 
     
@@ -203,7 +213,7 @@
 
 		\end{itemize}
 	
-    \item \textbf{Lead iOS Developer} PenPalWorld \\
+    \item \textbf{iOS Developer} PenPalWorld \\
 		\begin{tabular}{c|c}
 			\emph{July 2013--April 2015} & \emph{Remote}
 		\end{tabular}
@@ -249,41 +259,39 @@
 %		\end{itemize}
 \end{itemize}
 
-%\section*{Other Projects}
+\section*{Other Projects}
 
-%\begin{itemize}
-%
-%
-%    \item \textbf{Webmaster} Trinity Hall June Event \\
-%        \begin{tabular}{c|c}
-%            \emph{October 2014--June 2015} & \emph{Cambridge, UK}
-%        \end{tabular}
-%        \begin{itemize}
-%            \item In my second year of university I took on the role of
-%                Webmaster for the Trinity Hall June Event 2015, the largest
-%                capacity event in Cambridge University's famous May Week (with
-%                2000 people attending the event).
-%            \item My responsibilities included designing a bespoke, responsive
-%                website design in conjunction with the event's graphic
-%                designers. The site is no longer online as it has been
-%                superseded by the site for 2016.
-%            \item I was also responsible for managing the use of the event's
-%                ticketing software. This involved both practical and technical
-%                skills---I ran a team of 6 people on the night of the event to
-%                control admission, as well as writing custom ticket generation
-%                and distribution software.
-%            \item The role required me to work effectively on a large team with
-%                a wide range of interests and responsibilities.
-%        \end{itemize}
-%
-%\end{itemize}
+\begin{itemize}
+
+
+    \item \textbf{Webmaster} Trinity Hall June Event \\
+        \begin{tabular}{c|c}
+            \emph{October 2014--June 2015} & \emph{Cambridge, UK}
+        \end{tabular}
+        \begin{itemize}
+            \item In my second year of university I took on the role of
+              Webmaster for the Trinity Hall June Event 2015, the largest
+              capacity event in Cambridge University's famous May Week (with
+              2000 people attending the event).
+
+            \item I was responsible for web development, as well as managing the
+              use of the event's ticketing software. This involved both
+              practical and technical skills---I ran a team of 6 people on the
+              night of the event to control admission, as well as writing custom
+              ticket generation and distribution software.
+            
+            \item The role required me to work effectively on a large team with
+              a wide range of interests and responsibilities.
+        \end{itemize}
+
+\end{itemize}
 
 % Footer
-\begin{center}
-  \begin{footnotesize}
-    Last updated: \today \\
-    \href{\footerlink}{\texttt{\footerlink}}
-  \end{footnotesize}
-\end{center}
+%\begin{center}
+%  \begin{footnotesize}
+%    Last updated: \today \\
+%    \href{\footerlink}{\texttt{\footerlink}}
+%  \end{footnotesize}
+%\end{center}
 
 \end{document}
