Change address, galois cover letter

--- a/cv-us.tex
+++ b/cv-us.tex
@@ -84,10 +84,9 @@
 \vspace{0.25in}
 
 \begin{minipage}{0.45\linewidth}
-  Trinity Hall \\
-  Trinity Lane \\
+  1A Eachard Road \\
   Cambridge, UK \\
-  CB2 1TJ
+  CB3 0HZ
 \end{minipage}
 \begin{minipage}{0.45\linewidth}
   \begin{tabular}{ll}
