Research wording changes

--- a/cv-us.tex
+++ b/cv-us.tex
@@ -44,6 +44,7 @@
   top=1.25in
 }
 
+
 % Customize page headers
 \pagestyle{myheadings}
 \markright{\name}
@@ -110,13 +111,13 @@
 
 \section*{Research and Academic Projects}
   \begin{itemize}
-    \item \textbf{Static Analysis with TESLA} Masters Thesis \\
+    \item \textbf{Static Analysis with TESLA} Master's Research Project \\
       \begin{tabular}{c|c}
         \emph{November 2016--June 2017} & \emph{University of Cambridge}
       \end{tabular}
       \begin{itemize}
         \item TESLA is a framework for dynamic instrumentation of C programs
-          using temporal logic assertions. As part of my Masters degree, I am
+          using temporal logic assertions. As part of my Master's degree, I am
           conducting research into how static analysis can be used to extend the
           capabilities of this system.
 
@@ -125,12 +126,13 @@
           use this analysis to optimise instrumentation using TESLA.
       \end{itemize}
 
-    \item \textbf{An Implementation of the $\pi$-Calculus} Bachelors Thesis \\
+    \item \textbf{An Implementation of the $\pi$-Calculus} Undergraduate Final
+      Project \\
         \begin{tabular}{c|c}
             \emph{October 2015--May 2016} & \emph{University of Cambridge}
         \end{tabular}
         \begin{itemize}
-            \item In my final undergraduate year, my Bachelors project and
+            \item In my final undergraduate year, my major project and
               dissertation involved the development of a programming language
               and runtime environment based on the $\pi$-Calculus process
               algebra.
