Research up to date

--- a/cv-us.tex
+++ b/cv-us.tex
@@ -85,45 +85,62 @@
 \vspace{0.25in}
 
 \begin{minipage}{0.45\linewidth}
-  1A Eachard Road \\
-  Cambridge, UK \\
-  CB3 0HZ
+  104/3 Blackford Avenue \\
+  Edinburgh, Scotland \\
+  EH9 3ES
 \end{minipage}
 \begin{minipage}{0.45\linewidth}
   \begin{tabular}{ll}
     Phone: & +447591 461 843 \\
-    Email: & \href{mailto:bsc28@cam.ac.uk}{\tt bsc28@cam.ac.uk} \\
-    Skype: & \href{skype:bruce.collie}{bruce.collie}
+    Email: & \href{mailto:brucecollie82@gmail.com}{\tt brucecollie82@gmail.com}
   \end{tabular}
 \end{minipage}
 
 \section*{Education}
 
 \begin{itemize}
+  \item \textbf{University of Edinburgh}, Informatics (2017--)
+    \begin{itemize}
+      \item \textbf{PhD Pervasive Parallelism} (\emph{In Progress})
+    \end{itemize}
   \item \textbf{University of Cambridge}, Computer Science (2013--2017)
-        \begin{tabular}{c}
-        \end{tabular}
         \begin{itemize}
-            \item \textbf{MEng} (\emph{In Progress})
+            \item \textbf{MEng} (\emph{Distinction})
             \item \textbf{BA Hons.} (\emph{First Class})
         \end{itemize}
 \end{itemize}
 
 \section*{Research and Academic Projects}
   \begin{itemize}
-    \item \textbf{Static Analysis with TESLA} Master's Research Project \\
+    \item \textbf{Pervasive Parallelism} MScR Research Project \\
+      \begin{tabular}{c|c}
+        \emph{September 2017--August 2018} & \emph{University of Edinburgh}
+      \end{tabular}
+      \begin{itemize}
+        \item In the first year of my PhD programme, I will be undertaking an
+          MScR research project in the area of compiler technology and automatic
+          parallelisation of programs (with particular focus on heterogeneity).
+      \end{itemize}
+    \item \textbf{Static Analysis with TESLA} MEng Research Project \\
       \begin{tabular}{c|c}
         \emph{November 2016--June 2017} & \emph{University of Cambridge}
       \end{tabular}
       \begin{itemize}
         \item TESLA is a framework for dynamic instrumentation of C programs
-          using temporal logic assertions. As part of my Master's degree, I am
-          conducting research into how static analysis can be used to extend the
-          capabilities of this system.
+          using temporal logic assertions. As part of my MEng degree, I
+          conducted research into how static analysis can be used to improve the
+          performance of TESLA, enabling its use in new contexts.
 
-        \item The primary research goal is to identify a useful subset of
-          temporal logic assertions that can be proved at compile time, and to
-          use this analysis to optimise instrumentation using TESLA.
+        \item The project mixed theory with practice by integrating model
+          checking techniques with the LLVM-based TESLA toolchain.
+
+        \item Several promising results were obtained from the
+          project---performance of existing TESLA assertions could be improved
+          dramatically, and a detailed characterisation of programs suitable for
+          TESLA instrumentation was carried out.
+
+        \item The final implementation and associated report received a
+          distinction.
       \end{itemize}
 
     \item \textbf{An Implementation of the $\pi$-Calculus} Undergraduate Final
@@ -214,25 +231,25 @@
 
 		\end{itemize}
 	
-    \item \textbf{iOS Developer} PenPalWorld \\
-		\begin{tabular}{c|c}
-			\emph{July 2013--April 2015} & \emph{Remote}
-		\end{tabular}
-		\begin{itemize}
+    % \item \textbf{iOS Developer} PenPalWorld \\
+		% \begin{tabular}{c|c}
+			% \emph{July 2013--April 2015} & \emph{Remote}
+		% \end{tabular}
+		% \begin{itemize}
 
-            \item At PenPalWorld I created an iOS app for a an existing social
-                networking site with over a million users. Creating the app also
-                involved builing a custom web API to interface with the site's
-                existing database.
+    %         \item At PenPalWorld I created an iOS app for a an existing social
+    %             networking site with over a million users. Creating the app also
+    %             involved builing a custom web API to interface with the site's
+    %             existing database.
 
-            \item Throughout the project I worked closely with the owner
-                and founder of PenPalWorld to produce a quality end product.
+    %         % \item Throughout the project I worked closely with the owner
+    %         %     and founder of PenPalWorld to produce a quality end product.
 
-            \item On launch my app was used by approximately 150 unique users
-                per day, and my responsibilities were expanded to include
-                managing user satisfaction with the product.
+    %         % \item On launch my app was used by approximately 150 unique users
+    %         %     per day, and my responsibilities were expanded to include
+    %         %     managing user satisfaction with the product.
 
-\end{itemize}
+% \end{itemize}
 	
     %\item \textbf{Assistant iOS Developer} Mostly Serious \\
 %		\begin{tabular}{c|c}
