--- a/cv19.tex
+++ b/cv19.tex
@@ -48,6 +48,8 @@
 % Default font is the helvetica postscript font
 \usepackage{helvet}
 
+\usepackage{hyperref}
+
 % Increase text height
 \textheight=700pt
 
@@ -56,15 +58,15 @@
 %-------------------------------------------------------------------------------
 %	NAME AND ADDRESS SECTION
 %-------------------------------------------------------------------------------
-\name{John Smith}
+\name{Bruce Collie}
 
 % Note that addresses can be used for other contact information:
 % -phone numbers
 % -email addresses
 % -linked-in profile
 
-\address{Address 1 line 1\\Address 1 line 2\\Address 1 line 3}
-\address{Address 2 line 1\\Address 2 line 2\\Address 2 line 3}
+\address{\href{mailto://bruce.collie@ed.ac.uk}{\texttt{bruce.collie@ed.ac.uk}}\\\href{http://baltoli.github.io}{\texttt{baltoli.github.io}}\\07591461843}
+\address{104/3 Blackford Avenue\\Edinburgh\\EH9 3ES}
 
 % Uncomment to add a third address
 %\address{Address 3 line 1\\Address 3 line 2\\Address 3 line 3}
@@ -76,62 +78,16 @@
 %	EDUCATION SECTION
 %-------------------------------------------------------------------------------
 \section{EDUCATION}
-\textbf{Santa Clara University}, Santa Clara, CA\\
-{\sl Master of Science}, Computer Science and Engineering, June 2015\hfill GPA: 
-3.67
+\textbf{University of Edinburgh}: CDT in Pervasive Parallelism \\
+{\sl PhD} (2018--)\hfill In Progress
 \\
-{\sl Bachelor of Science}, Computer Science and Engineering, June 2014\hfill 
-GPA: 3.47
+{\sl MScR} (2017--18)\hfill
+Distinction \\\\
+\textbf{University of Cambridge}: Computer Science \\
+{\sl MEng} (2016--17)\hfill Distinction \\
+{\sl BA} (2013--16)\hfill $1^{\mathrm{st}}$ Class
 %-------------------------------------------------------------------------------
 
-%-------------------------------------------------------------------------------
-%	PROJECTS SECTION
-%-------------------------------------------------------------------------------
-\section{PROJECTS}
-\par
-\textbf{Project One}: 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper 
-vulputate vestibulum. Pellentesque viverra orci vitae dolor ultrices, eu semper 
-ex blandit. 
-
-\par
-\textbf{Project Two}:
-Nunc quis diam non sem tempus ornare. Nullam eleifend ligula varius 
-elementum pharetra. Donec fringilla quis mauris quis tristique. Vestibulum ac 
-accumsan quam, a semper mauris. 
-\par
-\textbf{Project Three}: 
-Pellentesque urna odio, euismod id nibh ut,  lobortis eleifend odio. Sed 
-placerat arcu pulvinar dictum egestas. Vivamus  scelerisque commodo urna sit 
-amet imperdiet. Fusce ac sodales quam.
-
-\par
-\textbf{Project Four}: 
-Integer mattis erat nec tortor fermentum mollis. Donec sit amet justo vitae 
-tellus pharetra tempor et nec metus. Nam et consequat dui, convallis laoreet 
-libero. 
-
-\par
-\textbf{Project Five}: 
-Phasellus eu imperdiet purus. Maecenas id purus leo. Nulla quis purus varius, 
-imperdiet mauris at, pellentesque erat. 
-
-%-------------------------------------------------------------------------------
-
-%-------------------------------------------------------------------------------
-%	COMPUTER SKILLS SECTION
-%-------------------------------------------------------------------------------
-\section{COMPUTER\\SKILLS}
-
-\textbf{Languages}: C, C++, Java, ML, Perl, Bash, Assembly, SQL, \LaTeX.
-\\
-\textbf{Web Development}: HTML, CSS, JavaScript, PHP, Apache, IIS, ASP.NET.
-\\
-\textbf{Applications}: Vi/Vim, Eclipse, Visual Studio, Git, VMWare, VirtualBox, 
-MySQL, Oracle 11g.
-\\
-\textbf{Operating Systems}: 
-Unix, Linux, FreeBSD, Mac OSX, Windows, Android.
 %-------------------------------------------------------------------------------
 
 %-------------------------------------------------------------------------------
@@ -146,44 +102,99 @@ Unix, Linux, FreeBSD, Mac OSX, Windows, Android.
 %-------------------------------------------------------------------------------
 
 \section{EXPERIENCE}
-\employer{Employer One}
-\location{Location One}
-\dates{Dates One}
-\title{\textbf{Title One}}
+
+\employer{University of Edinburgh}
+\location{Edinburgh}
+\dates{September 2017--}
+\title{\textbf{PhD in Pervasive Parallelism}}
 \begin{position}
-Vivamus ullamcorper a lacus non laoreet. Etiam ultricies in est quis finibus. 
-Curabitur posuere est quis felis sodales, vitae aliquam ex consequat. In non 
-magna felis.
+My current employment is as a PhD student in the Compiler and Architecture
+Design group at the University of Edinburgh. This position entails designing and
+developing significant research applications, performing experiments and
+authoring papers to showcase results. My work is primarily in C++, using the
+LLVM compiler framework.
 \end{position}
 
-\employer{Employer One}
-\location{Location One}
-\dates{Dates One}
-\title{\textbf{Title One}}
+\employer{GoCardless}
+\location{London}
+\dates{June--September 2016}
+\title{\textbf{Core Payments Developer}}
 \begin{position}
-Donec venenatis volutpat tortor, quis fringilla turpis ornare et. Curabitur 
-neque enim, facilisis vitae lacus non, malesuada volutpat tortor. Etiam 
-elementum neque nibh, ac faucibus ligula tempor vel. Pellentesque a pharetra 
-neque, vel facilisis nunc.
+At GoCardless I was a member of the group responsible for developing
+public-facing backend web services, using Ruby on Rails. My responsibilities
+included developing new libraries as part of the company's open-source work,
+designing new features and modernising legacy code.
 \end{position}
 
-\employer{Employer One}
-\location{Location One}
-\dates{Dates One}
-\title{\textbf{Title One}}
+\employer{RealVNC}
+\location{Cambridge}
+\dates{June--September 2015}
+\title{\textbf{Presales Developer}}
 \begin{position}
-Mauris lacinia tellus vel elit lobortis, ut convallis tellus euismod. Praesent 
-sagittis magna non nisl rutrum, dapibus mollis ante commodo. Donec scelerisque 
-velit a consequat vehicula. Nam eget dignissim est, et varius arcu. Vivamus eu 
-lacus feugiat, ullamcorper odio ut, blandit enim. Suspendisse potenti. 
-Vestibulum auctor purus et massa luctus, quis cursus mauris laoreet. Praesent 
-luctus dictum justo vitae dictum.
+During my internship at RealVNC I worked to develop a prototype implementation
+of Apple's CarPlay entertainment system to run on the company's head unit
+platform. This involved developing significant custom Linux kernel modules to interface with
+the CarPlay USB protocol.
 \end{position}
+
+\employer{Mobile Systems Group}
+\location{Cambridge}
+\dates{June--September 2014}
+\title{\textbf{Research iOS Developer}}
+\begin{position}
+As part of the Mobile Systems research group, I developed an iOS port of an
+existing Android application for performing pyschological surveys. My work also
+involved performing a feasibility study into the use of the Swift language for
+the group in the future.
+\end{position}
+
+%-------------------------------------------------------------------------------
+%	PROJECTS SECTION
+%-------------------------------------------------------------------------------
+\section{RESEARCH}
+
+\par
+\textbf{Program Synthesis}: I am interested in how program synthesis can be
+applied to learn behavioural models of libraries and hardware devices, using
+novel sources of information to efficiently navigate large solution search spaces.
+
+\par
+\textbf{Heterogenous Compilation}: My current research deals with new
+compilation models for heterogenous architectures, investigating how compiler
+developers and hardware vendors can cooperate to better optimise new and legacy
+code for the next generation of devices.
+
+\par
+\textbf{TESLA}: I investigated the use of static model checking techniques in the TESLA runtime
+temporal assertion system, demonstrating significant performance improvements on
+real instrumented code by optimising statically provable assertions.
+
+
+%-------------------------------------------------------------------------------
+%	COMPUTER SKILLS SECTION
+%-------------------------------------------------------------------------------
+\section{SKILLS}
+
+\textbf{Strong}: C++, C, LLVM, Python, Swift (iOS), Git
+
+\textbf{Familiar}: JavaScript, Ruby, SQL
+
+% \textbf{Languages}: C, C++, Java, ML, Perl, Bash, Assembly, SQL, \LaTeX.
+% \\
+% \textbf{Web Development}: HTML, CSS, JavaScript, PHP, Apache, IIS, ASP.NET.
+% \\
+% \textbf{Applications}: Vi/Vim, Eclipse, Visual Studio, Git, VMWare, VirtualBox, 
+% MySQL, Oracle 11g.
+% \\
+% \textbf{Operating Systems}: 
+% Unix, Linux, FreeBSD, Mac OSX, Windows, Android.
+%-------------------------------------------------------------------------------
+
 %-------------------------------------------------------------------------------
 %	Interests
 %-------------------------------------------------------------------------------
-\section{INTERESTS}
-Interest One, Interest Two, Interest Three, Interest Four, ...Et Cetera.
+% \section{INTERESTS}
+% Interest One, Interest Two, Interest Three, Interest Four, ...Et Cetera.
 %-------------------------------------------------------------------------------
 \end{resume}
 \end{document}
