--- a/cv19.tex
+++ b/cv19.tex
@@ -101,100 +101,109 @@ Distinction \\\\
 \end{format}
 %-------------------------------------------------------------------------------
 
-\section{EXPERIENCE}
+\section{RESEARCH}
 
-\employer{University of Edinburgh}
-\location{Edinburgh}
-\dates{September 2017--}
-\title{\textbf{PhD in Pervasive Parallelism}}
-\begin{position}
-My current employment is as a PhD student in the Compiler and Architecture
-Design group at the University of Edinburgh. This position entails designing and
-developing significant research applications, performing experiments and
-authoring papers to showcase results. My work is primarily in C++, using the
-LLVM compiler framework.
-\end{position}
+\par
+\textbf{Heterogenous Compilation}\\
+Compilation for parallel and heterogenous architectures, with a focus on how
+legacy and future code can be automatically and transparently targeted to
+emerging libraries and devices. Performance analysis and modelling of
+competing library implementations for scientific code.
 
-\employer{GoCardless}
-\location{London}
-\dates{June--September 2016}
-\title{\textbf{Core Payments Developer}}
-\begin{position}
-At GoCardless I was a member of the group responsible for developing
-public-facing backend web services, using Ruby on Rails. My responsibilities
-included developing new libraries as part of the company's open-source work,
-designing new features and modernising legacy code.
-\end{position}
+\par
+\textbf{Program Synthesis}\\
+Understanding and modelling the behaviour of black-box interfaces, and using
+synthesized programs in novel applications of similar-program search.
+Development of new algorithms and tools for synthesizing and JIT-compiling
+imperative programs.
 
-\employer{RealVNC}
-\location{Cambridge}
-\dates{June--September 2015}
-\title{\textbf{Presales Developer}}
-\begin{position}
-During my internship at RealVNC I worked to develop a prototype implementation
-of Apple's CarPlay entertainment system to run on the company's head unit
-platform. This involved developing significant custom Linux kernel modules to interface with
-the CarPlay USB protocol.
-\end{position}
+\par
+\textbf{Verification}\\
+Static analysis and model checking for runtime assertion systems in C programs,
+aiming to improve the performance of compiler instrumentation. Development of
+profiling and analysis tools for TESLA, a runtime assertion language implemented
+as a compiler extension.
 
-\employer{Mobile Systems Group}
-\location{Cambridge}
-\dates{June--September 2014}
-\title{\textbf{Research iOS Developer}}
-\begin{position}
-As part of the Mobile Systems research group, I developed an iOS port of an
-existing Android application for performing pyschological surveys. My work also
-involved performing a feasibility study into the use of the Swift language for
-the group in the future.
-\end{position}
+\section{PUBLICATIONS}
+
+\par
+\textbf{Augmenting Type Signatures for Program Synthesis}\\
+\emph{TyDe '19, Presentation}
+
+\par
+\textbf{Exploiting Accelerator Libraries Without Polluting Your Code}\\
+\emph{PACT '19, Conference Paper (in review)}
+
+% \employer{}
+% \location{Edinburgh}
+% \dates{September 2017--}
+% \title{\textbf{}}
+% \begin{position}
+% \end{position}
+
+% \par
+% \textbf{Program Synthesis}: I am interested in how program synthesis can be
+% applied to learn behavioural models of libraries and hardware devices, using
+% novel sources of information to efficiently navigate large solution search spaces.
+
+% \par
+% \textbf{Heterogenous Compilation}: My current research deals with new
+% compilation models for heterogenous architectures, investigating how compiler
+% developers and hardware vendors can cooperate to better optimise new and legacy
+% code for the next generation of devices.
+
+% \par
+% \textbf{TESLA}: I investigated the use of static model checking techniques in the TESLA runtime
+% temporal assertion system, demonstrating significant performance improvements on
+% real instrumented code by optimising statically provable assertions.
+
+% \employer{University of Edinburgh}
+% \location{Edinburgh}
+% \dates{September 2017--}
+% \title{\textbf{PhD in Pervasive Parallelism}}
+% \begin{position}
+% My current employment is as a PhD student in the Compiler and Architecture
+% Design group at the University of Edinburgh. This position entails designing and
+% developing significant research applications, performing experiments and
+% authoring papers to showcase results. My work is primarily in C++, using the
+% LLVM compiler framework.
+% \end{position}
 
 %-------------------------------------------------------------------------------
 %	PROJECTS SECTION
 %-------------------------------------------------------------------------------
-\section{RESEARCH}
+\section{EXPERIENCE}
 
-\par
-\textbf{Program Synthesis}: I am interested in how program synthesis can be
-applied to learn behavioural models of libraries and hardware devices, using
-novel sources of information to efficiently navigate large solution search spaces.
+\employer{Core Payments Developer}
+\location{London, 2016}
+\dates{}
+\title{\textbf{GoCardless}}
+\begin{position}
+Worked on developing large-scale financial web services, with responsibility for
+developing internal libraries, performing key infrastructure upgrades and
+responding to customer bug reports.
+\end{position}
 
-\par
-\textbf{Heterogenous Compilation}: My current research deals with new
-compilation models for heterogenous architectures, investigating how compiler
-developers and hardware vendors can cooperate to better optimise new and legacy
-code for the next generation of devices.
+\employer{Presales Developer}
+\location{Cambridge, 2015}
+\dates{}
+\title{\textbf{RealVNC}}
+\begin{position}
+Developed embedded software to interface a proprietary in-car entertainment
+platform with Apple's CarPlay software, working with Linux kernel modules and
+device drivers.
+\end{position}
 
-\par
-\textbf{TESLA}: I investigated the use of static model checking techniques in the TESLA runtime
-temporal assertion system, demonstrating significant performance improvements on
-real instrumented code by optimising statically provable assertions.
+\employer{iOS Developer}
+\location{Cambridge, 2014}
+\dates{}
+\title{\textbf{Mobile Systems Reasearch Group}}
+\begin{position}
+Worked on porting an existing user-facing mobile app for mental health
+monitoring from Android to iOS, and oversaw the deployment of this port to a new
+study. Presented a feasibility study of the Swift programming language for
+future work to researchers.
+\end{position}
 
-
-%-------------------------------------------------------------------------------
-%	COMPUTER SKILLS SECTION
-%-------------------------------------------------------------------------------
-\section{SKILLS}
-
-\textbf{Strong}: C++, C, LLVM, Python, Swift (iOS), Git
-
-\textbf{Familiar}: JavaScript, Ruby, SQL
-
-% \textbf{Languages}: C, C++, Java, ML, Perl, Bash, Assembly, SQL, \LaTeX.
-% \\
-% \textbf{Web Development}: HTML, CSS, JavaScript, PHP, Apache, IIS, ASP.NET.
-% \\
-% \textbf{Applications}: Vi/Vim, Eclipse, Visual Studio, Git, VMWare, VirtualBox, 
-% MySQL, Oracle 11g.
-% \\
-% \textbf{Operating Systems}: 
-% Unix, Linux, FreeBSD, Mac OSX, Windows, Android.
-%-------------------------------------------------------------------------------
-
-%-------------------------------------------------------------------------------
-%	Interests
-%-------------------------------------------------------------------------------
-% \section{INTERESTS}
-% Interest One, Interest Two, Interest Three, Interest Four, ...Et Cetera.
-%-------------------------------------------------------------------------------
 \end{resume}
 \end{document}
