--- a/cv19.tex
+++ b/cv19.tex
@@ -65,7 +65,7 @@
 % -email addresses
 % -linked-in profile
 
-\address{\href{mailto://bruce.collie@ed.ac.uk}{\texttt{bruce.collie@ed.ac.uk}}\\\href{http://baltoli.github.io}{\texttt{baltoli.github.io}}\\07591461843}
+\address{\href{mailto://brucecollie82@gmail.com}{\texttt{brucecollie82@gmail.com}}\\\href{http://baltoli.github.io}{\texttt{baltoli.github.io}}\\07591461843}
 \address{7/2 Ardmillan Terrace\\Edinburgh\\EH11 2JN}
 
 % Uncomment to add a third address
@@ -102,7 +102,7 @@ implementation and theory, including significant experience with LLVM.
     Python, Ruby, Scala, Java, and OCaml. Able to quickly adapt to new
     languages, tools and environments.
   \item[Tools] Familiar with common software engineering tools and workflows,
-    including source control (Git, SVN), project management (Github, JIRA) and
+    including source control (Git, SVN), project management (GitHub, JIRA) and
     CI/CD pipelines. Significant experience with remote working practices.
   \item[Research] Able to communicate effectively in person and through written
     media. High-quality, award-winning publication record across multiple top
@@ -121,7 +121,7 @@ larger programming languages research team. Established and maintained developer
 tools integral to the team's work, and provided specialist C++ expertise.
 
 Successfully balanced part-time employment with PhD studies in order to gain
-experience working on large-scale, cutting edge compiler technology.
+experience working on real-world compiler technology.
 \end{position}
 
 \employer{\textbf{Core Payments Developer}}
@@ -129,7 +129,7 @@ experience working on large-scale, cutting edge compiler technology.
 \dates{}
 \title{\textbf{GoCardless}}
 \begin{position}
-Worked on developing large-scale financial web services in Ruby, with
+Worked on developing critical, high-performance financial web services in Ruby, with
 responsibility for developing internal libraries, performing key infrastructure
 upgrades and responding to customer bug reports. Led initial public-facing work
 on new open-source efforts by the core team.
@@ -190,7 +190,7 @@ practical contexts. Facilitated interdisciplinary seminar discussions to improve
 the flow of ideas in this area.
 
 \par
-\textbf{Heterogenous Compilation}\\
+\textbf{Heterogeneous Compilation}\\
 Compilation for parallel and heterogenous architectures, with a focus on how
 legacy and future code can be automatically and transparently targeted to
 emerging libraries and devices. Performance analysis and modelling of
